--- a/environment.yaml
+++ b/environment.yaml
@@ -10,7 +10,7 @@ dependencies:
   - psycopg2
   - pyyaml
   - pydantic
-  - pydantic-core
+#  - pydantic-core
   - pulsar-client
   - openai
   - tenacity
