--- a/environment.yaml
+++ b/environment.yaml
@@ -10,10 +10,10 @@ dependencies:
   - psycopg2
   - pyyaml
   - pydantic
-#  - pydantic-core
-  - pulsar-client
+#  - pulsar-client
   - openai
   - tenacity
+  - nats-py
   - restrictedpython
   - alethic-ism-core
   - alethic-ism-db
