lots of fixes to streaming also added sessions to keep track of historical chat data

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -30,6 +30,18 @@ spec:
             subPath: .routing.yaml
             readOnly: true
         env:
+          - name: REDIS_HOST
+            valueFrom:
+              secretKeyRef:
+                name: alethic-ism-processor-openai-secret
+                key: REDIS_HOST
+
+          - name: REDIS_PORT
+            valueFrom:
+              secretKeyRef:
+                name: alethic-ism-processor-openai-secret
+                key: REDIS_PORT
+
           - name: LOG_LEVEL
             valueFrom:
               secretKeyRef:
