--- a/environment.yaml
+++ b/environment.yaml
@@ -10,10 +10,12 @@ dependencies:
   - psycopg2
   - pyyaml
   - pydantic
-  - redis
+  - redis-py
   - openai
+  - tiktoken  # for counting input and output tokens on streams
   - tenacity
   - nats-py
+  - mako
   - restrictedpython
   - alethic-ism-core
   - alethic-ism-db
