--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,4 +1,4 @@
-name: Docker Image CI for OpenAI Processor (Consumer)
+name: Docker Image CI for Alethic OpenAI Processor (Python)
 
 on:
   push:
@@ -14,52 +14,32 @@ jobs:
 
     steps:
 
-    - name: Checkout Processor Code
+    - name: Checkout Repository
       id: code_checkout
       uses: actions/checkout@v3
 
     - name: Assign Environment Variables for Build & Deployment Process
       id: setup_variables
-
       run: |
         COMMIT_ID=$(echo $GITHUB_SHA | head -c7)
-        TAG="krasaee/alethic-ism-processor-openai:$COMMIT_ID"
-
+        NAMESPACE="krasaee"
+        PROJECT_NAME="alethic-ism-processor-openai"
+        IMAGE="$NAMESPACE/$PROJECT_NAME:$COMMIT_ID"
+        
         echo "COMMIT_ID=$COMMIT_ID" >> "$GITHUB_ENV" # for local variables
-        echo "TAG=$TAG" >> "$GITHUB_ENV" # for local variables
+        echo "IMAGE=$IMAGE" >> "$GITHUB_ENV" # for local variables
 
-    - name: Build container image
+    - name: Build Container Image
       id: build_docker_image
       run: |
         echo "COMMIT ID: $COMMIT_ID"
-        echo "DOCKER TAG: $TAG"
+        echo "DOCKER IMAGE: $IMAGE"
         
-        # fetch custom conda modules
-        AUTH_HEADER="Authorization: token ${{ secrets.ALETHIC_GITHUB_ACTION_PACKAGE_ACCESS_TOKEN }}"
-
-        # Fetch artifacts list from GitHub API and use jq to parse the JSON and find the artifact that matches the pattern
-        ARTIFACTS_JSON=$(curl -s "https://api.github.com/repos/quantumwake/alethic-ism-core/actions/artifacts")
-        ARTIFACT_NAME=$(echo $ARTIFACTS_JSON | jq -r '[.artifacts[] | {name: .name, created_at: .created_at}] | sort_by(.created_at) | reverse[0] | .name' )        
-        #ARTIFACT_NAME=$(echo $ARTIFACTS_JSON | jq -r '.artifacts[] | select(.name | test("alethic-ism-core_*.*.*_*.tar.gz")) | .name')
-        ARTIFACT_DOWNLOAD_URL=$(echo $ARTIFACTS_JSON | jq -r ".artifacts[] | select(.name == \"$ARTIFACT_NAME\") | .archive_download_url")
-        
-        curl -H "$AUTH_HEADER" -L $ARTIFACT_DOWNLOAD_URL -o artifact_core.zip
-        unzip artifact_core.zip
-
-        # Fetch artifacts list from GitHub API and use jq to parse the JSON and find the artifact that matches the pattern
-        ARTIFACTS_JSON=$(curl -s "https://api.github.com/repos/quantumwake/alethic-ism-db/actions/artifacts")
-        ARTIFACT_NAME=$(echo $ARTIFACTS_JSON | jq -r '[.artifacts[] | {name: .name, created_at: .created_at}] | sort_by(.created_at) | reverse[0] | .name' )
-        #ARTIFACT_NAME=$(echo $ARTIFACTS_JSON | jq -r '.artifacts[] | select(.name | test("alethic-ism-db_*.*.*_*.tar.gz")) | .name')
-        ARTIFACT_DOWNLOAD_URL=$(echo $ARTIFACTS_JSON | jq -r ".artifacts[] | select(.name == \"$ARTIFACT_NAME\") | .archive_download_url")
-        curl -H "$AUTH_HEADER" -L $ARTIFACT_DOWNLOAD_URL -o artifact_db.zip
-        unzip artifact_db.zip
-
         # build the docker image
-        echo "Building with the fully qualified registry tag $TAG"
-        ./docker_build_conda_package.sh $TAG
+        bash docker_build.sh -i $IMAGE
   
-        # pass the tag to the next step
-        echo "TAG=$TAG" >> "$GITHUB_ENV" # for local variables
+        # pass the image to the next step
+        echo "IMAGE=$IMAGE" >> "$GITHUB_ENV" # for local variables
 
     - name: Login to Docker Hub
       id: dockerhub_login
@@ -71,14 +51,8 @@ jobs:
     - name: Push container image to Docker Hub Container Registry
       id: push_docker_image
       run: |
-        echo "Pushing container file with tag $TAG"
-        docker push $TAG
-
-    - name: Update deployment file
-      run: |
-        echo "Updating deployment file with tag $TAG"
-        sed -i "s|<IMAGE>|$TAG|" $GITHUB_WORKSPACE/k8s/deployment.yaml
-        cat $GITHUB_WORKSPACE/k8s/deployment.yaml
+        echo "Pushing container file with image $IMAGE"
+        bash docker_push.sh -i $IMAGE
 
     - name: Install doctl
       uses: digitalocean/action-doctl@v2
@@ -89,7 +63,8 @@ jobs:
       run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 qwake-k8s-cluster
 
     - name: Deploy to DigitalOcean Kubernetes
-      run: kubectl apply -f $GITHUB_WORKSPACE/k8s/deployment.yaml
+      run: |
+        bash docker_deploy.sh -i $IMAGE
 
     - name: Verify deployment
       run: kubectl rollout status deployment/alethic-ism-processor-openai-deployment -n alethic
